--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <main>
+        <div class="bg">
+            <img src="https://pbs.twimg.com/profile_images/1846355239231688704/Gdic6Rwb_400x400.jpg" alt="meu namorado incrivel :3" class="pfp">
+            <h1>Ocraska ❤</h1>
+            <div class="botoes">
+                <a href=""> <button class="block1">Te</button></a>
+                <a href=""> <button class="block2">Amo</button></a>
+                <a href=""> <button class="block3">Amor</button></a>
+                <a href=""> <button class="block4">❤</button></a>
+            </div>
+            <h3>Made by Hawsty ❤</h1>
+        </div>
+    </main>
 </body>
 </html>
